<resources>
    <string name="app_name">Amber Girls Hostel</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Powered By fcodex</string>
    <string name="nav_header_subtitle">info@fcodex.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Exit App String -->
    <string name="exit_app_text">Are You Sure You want to exit</string>
    <string name="google_maps_key">AIzaSyBzi6M0lLUzum0NqoN8pusfqlmZB9ydu2I</string>

    <string name="menu_hostel">Hostel</string>
    <string name="menu_share_apps">Share App</string>
    <string name="menu_more_apps">More Apps</string>
    <string name="menu_privacy_policy">Privacy Policy</string>
    <string name="menu_exit_app">Exit</string>
    <string name="title_activity_maps">Map</string>
    <string name="enter_email_hint">Enter Email</string>
    <string name="enter_password_hint">Enter Password</string>
    <string name="forget_password">Forget Password</string>
    <string name="login_text">Login</string>
    <string name="or_text">Or</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_confirm_password">Enter Confirm Password</string>
    <string name="enter_number">Enter Number</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>

</resources>