<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_share_app"
            android:icon="@drawable/ic_share"
            android:checked="false"
            android:title= "@string/menu_share_apps" />
        <item
            android:id="@+id/nav_more_apps"
            android:icon="@drawable/ic_more_apps"
            android:title= "@string/menu_more_apps" />
        <item
            android:id="@+id/nav_privacy_policy"
            android:icon="@drawable/ic_privacy_policy"
            android:title= "@string/menu_privacy_policy" />
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_exit"
            android:title="@string/menu_exit_app" />
    </group>

</menu>